--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
       <div class = "conatiner">
             <div class="row">
-              <div class = "col-xs-12 text-center" id ="top-bar">
-                  <h1>Eat Da Burger! </h1>
+              <div class = "col-xs-6 text-center" id ="top-bar">
+                  <h1 class ="res_font">Eat Da Burger! </h1>
                 </div>
                 <div class="col-xs-6 text-center" class="task">
                     <div class="row">
@@ -29,7 +29,17 @@
                       {{/if}}
                       {{/each}}
                     </div>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-xs-12 text-center enter_section">
+                          <form action="/burger/create" method="POST">
+                            <input type="text" name ="burger_name" class="from-control" value="" id="enter_text">
+                            <button type="submit" class="btn btn-primary" id="text-enter-button">SUBMIT</button>
+                          </form>
+                          <p> Type which burger you want to eat</p>
+                        </div>
 
-                    
+                    </div>
+                  </div>
                 </div>
             </div>
