--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-      
+
       <br>
 
       <!-- Burger Image -->
@@ -26,19 +26,21 @@
       <center>
         <h1 class="red_font">Eat da Burger! <small class="tiny_text"> Order</small></h1>
       </center>
-      
-      <br>
-    {{{body}}}
-		
-<br><br>
 
-      <!-- Input New Burgers Form -->
-      <form action="burger/create" method="POST"> 
-        
+      <br>
+      <div>
+    {{{body}}}
+  </div>
+<br>
+<br>
+
+      {{!-- <!-- Input New Burgers Form -->
+      <form action="burger/create" method="POST">
+
         <!-- Text Area Input -->
         <div class="row">
           <!-- Empty Div to help center textarea -->
-          <div class="col-md-3"></div> 
+          <div class="col-md-3"></div>
 
           <!-- Burger Input Box -->
           <div class="form-group col-md-6">
@@ -47,9 +49,9 @@
           </div>
 
           <!-- Empty Div to help center textarea -->
-          <div class="col-md-3"></div> 
+          <div class="col-md-3"></div>
         </div>
-      
+
         <!-- Submit Button -->
         <center>
           <button id="submit-button" type="submit" class="btn btn-danger">Place Order</button>
@@ -68,6 +70,6 @@
      <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <!-- Link in Local JavaScript (for sound effects) -->
-    <script src="/assets/javascript/burger_sounds.js"></script>
+    <script src="/assets/javascript/burger_sounds.js"></script> --}}
 </body>
 </html>
